--- a/HW_3_practical.ipynb
+++ b/HW_3_practical.ipynb
@@ -737,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The behaviour is, for radical criteria false negative probabilites are smaller, and for conservative criteria it is higher."
+    "As expected, for radical criteria ($\\rho<0$) false negative probabilites are smaller, and for conservative ($rho>0$) criteria it is higher."
    ]
   }
  ],
