--- a/HW_3_practical.ipynb
+++ b/HW_3_practical.ipynb
@@ -464,9 +464,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The red line in the plots above correspons to the false positive probabilities for a balanced criterion, the blue line shows the probabilities we got for the different values of $\\rho$.\n",
+    "The red line in the plots above corresponds to the false positive probabilities for a balanced criterion, the blue line shows the probabilities we got for the different values of $\\rho$.\n",
     "\n",
-    "This results are consistent with the theoretical statement and the previous simulation."
+    "These results are consistent with the theoretical statement and the previous simulation."
    ]
   },
   {
@@ -480,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets simulate sample with unequal means."
+    "Lets simulate samples with unequal means."
    ]
   },
   {
